// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine, notes/ init/ basic/: dir1 1`] = `"/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-6Wj27ifAa4yn"`;

exports[`engine, notes/ init/ basic/: dir1 2`] = `
Array [
  "foo.ch1.md",
  "foo.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ init/ basic/: dir2 1`] = `"/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-AfOXhMM4076D"`;

exports[`engine, notes/ init/ basic/: dir2 2`] = `
Array [
  "bar.ch1.md",
  "bar.md",
  "bar.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ init/ basic/: notes 1`] = `
Object {
  "4201b302-5acd-4bc1-8cf1-fca79c84fc6d": Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "4201b302-5acd-4bc1-8cf1-fca79c84fc6d",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-6Wj27ifAa4yn",
    },
  },
  "acc77a5b-2168-4e82-a297-2b65c8a5a84b": Object {
    "body": "
",
    "children": Array [
      "bar",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "acc77a5b-2168-4e82-a297-2b65c8a5a84b",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-AfOXhMM4076D",
    },
  },
  "bar": Object {
    "body": "
",
    "children": Array [
      "bar.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "id": "bar",
    "links": Array [],
    "parent": "acc77a5b-2168-4e82-a297-2b65c8a5a84b",
    "schema": Object {
      "moduleId": "bar",
      "schemaId": "bar",
    },
    "title": "Bar",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-AfOXhMM4076D",
    },
  },
  "bar.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.ch1",
    "id": "bar.ch1",
    "links": Array [],
    "parent": "bar",
    "schema": Object {
      "moduleId": "bar",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-AfOXhMM4076D",
    },
  },
  "foo": Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "4201b302-5acd-4bc1-8cf1-fca79c84fc6d",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-6Wj27ifAa4yn",
    },
  },
  "foo.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-6Wj27ifAa4yn",
    },
  },
}
`;

exports[`engine, notes/ init/ basic/: schemas 1`] = `
Object {
  "bar": Object {
    "fname": "bar",
    "imports": Array [],
    "root": Object {
      "children": Array [
        "ch1",
      ],
      "id": "bar",
      "parent": "root",
      "title": "bar",
    },
    "schemas": Object {
      "bar": Object {
        "body": "",
        "children": Array [
          "ch1",
        ],
        "created": 1605139102401,
        "data": Object {},
        "desc": "",
        "fname": "__empty",
        "id": "bar",
        "links": Array [],
        "parent": "root",
        "title": "bar",
        "type": "schema",
        "updated": 1605139102401,
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-AfOXhMM4076D",
        },
      },
      "ch1": Object {
        "body": "",
        "children": Array [],
        "created": 1605139102401,
        "data": Object {},
        "desc": "",
        "fname": "__empty",
        "id": "ch1",
        "links": Array [],
        "parent": "bar",
        "title": "ch1",
        "type": "schema",
        "updated": 1605139102401,
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-AfOXhMM4076D",
        },
      },
    },
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-AfOXhMM4076D",
    },
    "version": 1,
  },
  "foo": Object {
    "fname": "foo",
    "imports": Array [],
    "root": Object {
      "children": Array [
        "ch1",
      ],
      "id": "foo",
      "parent": "root",
      "title": "foo",
    },
    "schemas": Object {
      "ch1": Object {
        "body": "",
        "children": Array [],
        "created": 1605139102399,
        "data": Object {},
        "desc": "",
        "fname": "__empty",
        "id": "ch1",
        "links": Array [],
        "parent": "foo",
        "title": "ch1",
        "type": "schema",
        "updated": 1605139102399,
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-6Wj27ifAa4yn",
        },
      },
      "foo": Object {
        "body": "",
        "children": Array [
          "ch1",
        ],
        "created": 1605139102398,
        "data": Object {},
        "desc": "",
        "fname": "__empty",
        "id": "foo",
        "links": Array [],
        "parent": "root",
        "title": "foo",
        "type": "schema",
        "updated": 1605139102398,
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-6Wj27ifAa4yn",
        },
      },
    },
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-6Wj27ifAa4yn",
    },
    "version": 1,
  },
  "root": Object {
    "fname": "root",
    "imports": Array [],
    "root": Object {
      "children": Array [],
      "id": "root",
      "parent": "root",
      "title": "root",
    },
    "schemas": Object {
      "root": Object {
        "body": "",
        "children": Array [],
        "created": 1605139102399,
        "data": Object {},
        "desc": "",
        "fname": "__empty",
        "id": "root",
        "links": Array [],
        "parent": "root",
        "title": "root",
        "type": "schema",
        "updated": 1605139102399,
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-6Wj27ifAa4yn",
        },
      },
    },
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-87151-6Wj27ifAa4yn",
    },
    "version": 1,
  },
}
`;
